--- a/project/test/assets3.html
+++ b/project/test/assets3.html
@@ -155,261 +155,241 @@
 			</div>
 		</div>
 	</header>
-	<section class="crypto">
+	<section class="progress mt40">
 		<div class="wrapper">
-			<div class="crypto__wrap block">
-				<div class="block__title-row">
-					<h3 class="block__title">Crypto Loans</h3>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">C2C Lending</p>
-				</div>
-				<div class="block__hr--top">
-					<div class="block__row">
-						<p class="title2">Loan Amount</p>
-						<a href="#" class="block__txt btn-link">All</a>
-					</div>
-					<div class="inputSelWrap">
-						<div class="select">
-							<a href="#" class="select__btns" data-value="usdt">
-								<img 
-									src="./img/icon/val/usdt.png" 
-									alt=""
-								/>
-								USDT
-							</a>
-							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
-							</ul>
-						</div>
-						<input 
-							type="number" 
-							placeholder="MIN Loan Amount 100 USDT"
-						/>
-					</div>
-					<div class="block__row">
-						<p class="title2">Collateral Amount</p>
-					</div>
-					<div class="inputSelWrap">
-						<div class="select">
-							<a href="#" class="select__btns" data-value="btc">
-								<img 
-									src="./img/icon/val/btc.png" 
-									alt=""
-								/>
-								BTC
-							</a>
-							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
-							</ul>
-						</div>
-						<input 
-							type="number" 
-							placeholder="Available 0 BTC"
-						/>
-					</div>
-					<div class="block__row">
-						<p class="title2">Loan Term</p>
-					</div>
-					<div class="select">
-						<a href="#" class="select__btns" data-value="30">30 days</a>
-						<ul class="select__list">
-							<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
-						</ul>
-					</div>
-					<ul class="crypto__info-list">
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Daily Interest Rate</p>
-							<p class="crypto__txt">0.050000%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Annual Interest Rate</p>
-							<p class="crypto__txt">18.25%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Total Interest Rate</p>
-							<p class="crypto__txt">0.00000000 USDT</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt-pat">Repayment Amount</p>
-							<p class="crypto__txt-min">0.00000000 USDT</p>
-						</li>
-					</ul>
-					<label id="agree" class="block__agree ">
-						<input type="checkbox" name="" id="agree">
-						<span class="checkbox"></span>
-						<p>I agree to the Loan <a href="#" class="btn-link">Service Agreement</a></p>
-					</label>
-				</div>
-				<button class="btn-or-big">Take a loan</button>
-			</div>
-		</div>
-	</section>
-	<section class="progress">
-		<div class="wrapper">
+			<h2 class="starking__title">Assets</h2>
 			<div class="block">
 				<div class="block__title-row">
-					<h3 class="block__title">Maker in progress</h3>
+					<h3 class="block__title"></h3>
+					<p class="block__sub-title">Funding</p>
 					<span class="block__dot">•</span>
-					<p class="block__sub-title">Collection in progress</p>
+					<p class="block__sub-title">Funding</p>
 					<span class="block__dot">•</span>
-					<p class="block__sub-title">Completed</p>
+					<p class="block__sub-title">Stocks</p>
+					<span class="block__dot">•</span>
+					<p class="block__sub-title">Staking</p>
 				</div>
+				
 				<div class="progress__table">
+					<div class="balanceRw">
+						<div class="balanceRw__left">
+							<p class="txt__min-text">Acoount balance:</p>
+							<p class="balanceRw__text">0.002314131<span> BTC = $0</span></p>
+						</div>
+						<button class="btn-ro balanceRw__btn">Deposit & Withdrawal History</button>
+					</div>
+					<div class="filter row-bt mt15">
+						<ul class="filter__list">
+							<li class="filter__item">
+								<div class="select select--date">
+									<a href="#" class="select__btns" data-value="30">
+										1 Month
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="Today"
+											>
+											Today
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn  active" 
+												data-name="1m"
+											>
+											1 Month
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="3m"
+											>
+											3 Months
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="1y"
+											>
+											1 Year
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="Customize"
+											>
+											Customize	
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="filter__item">
+								<div class="select">
+									<a href="#" class="select__btns" data-value="all">
+										All
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn active" 
+												data-name="all"
+											>
+											All
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="1m"
+											>
+											1 Month
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="completed"
+											>
+											Completed
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="inProgress"
+											>
+											In progress
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="filter__item">
+								<div class="select selNoAct">
+									<a href="#" class="select__btns" data-value="30">
+										Coin
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn active" 
+												data-name="stocks"
+											>
+											Stocks
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="sPot"
+											>
+											SPot
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="stocks"
+											>
+											Stocks
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+						<button class="btn-rw">Export to CVS</button>
+					</div>
 					<table class="block__table">
 						<thead>
 							<tr>
-								<th>Time</th>
 								<th>Coin</th>
+								<th>Time</th>
 								<th>Amount</th>
-								<th>Coin rate</th>
-								<th>Estimated benefit</th>
-								<th>Progress</th>
-								<th>Cycle</th>
-								<th>Executed Automatic maker</th>
+								<th>BlockChain Record</th>
 								<th>Status</th>
-								<th>Action</th>
+								<th>Remark</th>
 							</tr>
 						</thead>
+						<tbody>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+							<tr>
+								<td>BTC</td>
+								<td>2020/02/11 12:34</td>
+								<td>0</td>
+								<td class="btn-txt-copy"><i class="icon-sr icon-sr-cop"></i> <span class="txt-copy">0x85a2b694cd4ce8c90133b87d543553027c850f6d0901389d8922e36b53fe439e</span></td>
+								<td class="txt--green">Succes</td>
+								<td>Contact support or live chat</td>
+							</tr>
+						</tbody>
 					</table>
-					<div class="block__none-data">
-						<img 
-							src="./img/elem/no-data.png" 
-							alt=""
-						/>
-					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	
-	<footer class="footer">
-		<div class="footer__top">
-			<h3 class="footer__part">PARTNERS</h3>
-			<ul class="footer__part-list">
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/brave.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/TCC.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/kyber.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/poool.png" 
-						alt=""
-					/>
-				</li>
-			</ul>
-			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
-		</div>
+	<footer class="footer footer--nw">
 		<div class="footer__bot">
 			<div class="footer__line">
 				<div class="footer__row-links">
