--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -48,6 +48,30 @@
 			<a href="./main-acc.html">main with acc</a>
 		</li>
 		<li>
+			<a href="./bal-det.html">bal-det</a>
+		</li>
+		<li>
+			<a href="./order-filt.html">order-filt</a>
+		</li>
+		<li>
+			<a href="./order.html">order</a>
+		</li>
+		<li>
+			<a href="./assets.html">assets</a>
+		</li>
+		<li>
+			<a href="./assets2.html">assets 2</a>
+		</li>
+		<li>
+			<a href="./assets3.html">assets 3</a>
+		</li>
+		<li>
+			<a href="./terms.html">terms</a>
+		</li>
+		<li>
+			<a href="./crypto-loans.html">crypto loans</a>
+		</li>
+		<li>
 			<a href="./building.html">building</a>
 		</li>
 		<li>
