--- a/project/test/staking.html
+++ b/project/test/staking.html
@@ -291,7 +291,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="faq">
+	<section class="mt40 acts">
 		<div class="wrapper">
 			<div class="block">
 				<h3 class="block__title">FAQ</h3>
