--- a/project/test/table-staking.html
+++ b/project/test/table-staking.html
@@ -428,7 +428,7 @@
 						Stocks
 					</button>
 				</div>
-				<div class="vars__tabs">
+				<div class="vars__tabs" id="spot">
 					<ul class="vars__nav-tab">
 						<li class="vars__nav-item">
 							<button
