--- a/project/test/main-acc.html
+++ b/project/test/main-acc.html
@@ -166,18 +166,16 @@
 		</div>
 	</div>
 	<section class="head">
-		<div class="head__tit-box">
-			<h2 class="head__title-big">
-				Find the next precious <br />
-				stone among cryptocurrencies <br />
+		<div class="block__tit-box">
+			<h2 class="block__title-big">
+				Find the next precious <br>
+				stone among cryptocurrencies <br>
 				on bit<span>look</span>
 			</h2>
-			<p class="head__sun-title mt30">
+			<p class="block__sun-title  mt30">
 				1 out of 4 Cryptocurrency Holders in the World with mybit.exchange
 			</p>
-			<button 
-				class="btn-or"
-				>
+			<button class="btn-or" data-btnpop="joinBtn">
 				Join us now
 			</button>
 		</div>
