--- a/project/test/openOrdersNoData.html
+++ b/project/test/openOrdersNoData.html
@@ -155,203 +155,312 @@
 			</div>
 		</div>
 	</header>
-	<section class="crypto">
+	<section class="progress mt40">
 		<div class="wrapper">
-			<div class="crypto__wrap block">
-				<div class="block__title-row">
-					<h3 class="block__title">Crypto Loans</h3>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">C2C Lending</p>
-				</div>
-				<div class="block__hr--top">
-					<div class="block__row">
-						<p class="title2">Loan Amount</p>
-						<a href="#" class="block__txt btn-link">All</a>
-					</div>
-					<div class="inputSelWrap">
-						<div class="select">
-							<a href="#" class="select__btns" data-value="usdt">
-								<img 
-									src="./img/icon/val/usdt.png" 
-									alt=""
-								/>
-								USDT
-							</a>
-							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
-							</ul>
-						</div>
-						<input 
-							type="number" 
-							placeholder="MIN Loan Amount 100 USDT"
-						/>
-					</div>
-					<div class="block__row">
-						<p class="title2">Collateral Amount</p>
-					</div>
-					<div class="inputSelWrap">
-						<div class="select">
-							<a href="#" class="select__btns" data-value="btc">
-								<img 
-									src="./img/icon/val/btc.png" 
-									alt=""
-								/>
-								BTC
-							</a>
-							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
-							</ul>
-						</div>
-						<input 
-							type="number" 
-							placeholder="Available 0 BTC"
-						/>
-					</div>
-					<div class="block__row">
-						<p class="title2">Loan Term</p>
-					</div>
-					<div class="select">
-						<a href="#" class="select__btns" data-value="30">30 days</a>
-						<ul class="select__list">
-							<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
-						</ul>
-					</div>
-					<ul class="crypto__info-list">
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Daily Interest Rate</p>
-							<p class="crypto__txt">0.050000%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Annual Interest Rate</p>
-							<p class="crypto__txt">18.25%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Total Interest Rate</p>
-							<p class="crypto__txt">0.00000000 USDT</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt-pat">Repayment Amount</p>
-							<p class="crypto__txt-min">0.00000000 USDT</p>
-						</li>
-					</ul>
-					<label id="agree" class="block__agree ">
-						<input type="checkbox" name="" id="agree">
-						<span class="checkbox"></span>
-						<p>I agree to the Loan <a href="#" class="btn-link">Service Agreement</a></p>
-					</label>
-				</div>
-				<button class="btn-or-big">Take a loan</button>
-			</div>
-		</div>
-	</section>
-	<section class="progress">
-		<div class="wrapper">
+			<h2 class="starking__title">Orders</h2>
 			<div class="block">
 				<div class="block__title-row">
-					<h3 class="block__title">Maker in progress</h3>
+					<h3 class="block__title">Order History</h3>
 					<span class="block__dot">•</span>
-					<p class="block__sub-title">Collection in progress</p>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">Completed</p>
+					<p class="block__sub-title">Order history</p>
 				</div>
+				
 				<div class="progress__table">
+					<div class="filter">
+						<p class="title2">Filter</p>
+						<ul class="filter__list">
+							<li class="filter__item">
+								<p class="txt__min-text">Date</p>
+								<div class="select select--date">
+									<a href="#" class="select__btns" data-value="30">
+										30 day
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn  active" 
+												data-name="30"
+											>
+											30 day
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="14"
+											>
+												14 day	
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="7"
+											>
+												7 day	
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="filter__item">
+								<p class="txt__min-text">Pair</p>
+								<div class="select__row">
+									<div class="select select--pair">
+										<a href="#" class="select__btns" data-value="all">
+											All
+										</a>
+										<ul class="select__list">
+											<li class="select__item">
+												<input 
+													class="select__search"
+													type="text"
+													placeholder="Search"
+												/>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn active" 
+													data-name="all"
+												>
+												All
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BTC"
+												>
+												BTC
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="ETH"
+												>
+												ETH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="XRP"
+												>
+												XRP
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BCH"
+												>
+												BCH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BTC"
+												>
+												BTC
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="ETH"
+												>
+												ETH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="XRP"
+												>
+												XRP
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BCH"
+												>
+												BCH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BTC"
+												>
+												BTC
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="ETH"
+												>
+												ETH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="XRP"
+												>
+												XRP
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BCH"
+												>
+												BCH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BTC"
+												>
+												BTC
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="ETH"
+												>
+												ETH
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="XRP"
+												>
+												XRP
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="BCH"
+												>
+												BCH
+												</button>
+											</li>
+										</ul>
+									</div>
+									<p class="select__ter"> - </p>
+									<div class="select select--pair">
+										<a href="#" class="select__btns" data-value="all">
+											All
+										</a>
+										<ul class="select__list">
+											<li class="select__item">
+												<button 
+													class="select__btn  active" 
+													data-name="all"
+												>
+												All
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="ETH"
+												>
+												ETH	
+												</button>
+											</li>
+											<li class="select__item">
+												<button 
+													class="select__btn" 
+													data-name="USDT"
+												>
+												USDT
+												</button>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</li>
+							<li class="filter__item">
+								<p class="txt__min-text">Side</p>
+								<div class="select select--side">
+									<a href="#" class="select__btns" data-value="All">
+										All sides
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn active" 
+												data-name="all"
+											>
+											All sides
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="buy"
+											>
+											Buy
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="sell"
+											>
+											Sell	
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="filter__item">
+								<p class="txt__min-text">Exchange</p>
+								<div class="select select--exchange">
+									<a href="#" class="select__btns" data-value="30">
+										Stocks
+									</a>
+									<ul class="select__list">
+										<li class="select__item">
+											<button 
+												class="select__btn active" 
+												data-name="stocks"
+											>
+											Stocks
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="sPot"
+											>
+											SPot
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="stocks"
+											>
+											Stocks
+											</button>
+										</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+						<button class="btn-ro">Search</button>
+					</div>
 					<table class="block__table">
 						<thead>
 							<tr>
@@ -379,37 +488,7 @@
 		</div>
 	</section>
 	
-	<footer class="footer">
-		<div class="footer__top">
-			<h3 class="footer__part">PARTNERS</h3>
-			<ul class="footer__part-list">
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/brave.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/TCC.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/kyber.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/poool.png" 
-						alt=""
-					/>
-				</li>
-			</ul>
-			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
-		</div>
+	<footer class="footer footer--nw">
 		<div class="footer__bot">
 			<div class="footer__line">
 				<div class="footer__row-links">
